[project]
name = "telegram-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "mcp[cli]>=1.6.0",
    "pyrogram>=2.0.106",
    "pytz>=2025.2",
    "telethon>=1.39.0",
]

[tool.setuptools]
py-modules = ["main"]
